--- a/myProject/myProject.csproj
+++ b/myProject/myProject.csproj
@@ -179,6 +179,10 @@
     <Compile Include="Migrations\201407251405315_ThirdCommit.Designer.cs">
       <DependentUpon>201407251405315_ThirdCommit.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201407280726268_FourthMigration.cs" />
+    <Compile Include="Migrations\201407280726268_FourthMigration.Designer.cs">
+      <DependentUpon>201407280726268_FourthMigration.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Languages.cs" />
@@ -224,8 +228,6 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="Views\Home\About.cshtml" />
-    <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
     <Content Include="Views\Account\_ChangePasswordPartial.cshtml" />
@@ -254,6 +256,8 @@
     <Content Include="Views\Replies\Details.cshtml" />
     <Content Include="Views\Replies\Edit.cshtml" />
     <Content Include="Views\Replies\Index.cshtml" />
+    <Content Include="Views\Replies\ShowReply.cshtml" />
+    <Content Include="Views\Account\ViewProfile.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -275,6 +279,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201407251405315_ThirdCommit.resx">
       <DependentUpon>201407251405315_ThirdCommit.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201407280726268_FourthMigration.resx">
+      <DependentUpon>201407280726268_FourthMigration.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
