--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -82,9 +82,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Repositories\IRepository.cs" />
-    <Compile Include="UoW\IUnitOfWork.cs" />
-    <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Interfaces\IDbContext.cs" />
+    <Compile Include="Models\DbContext.cs" />
+    <Compile Include="Interfaces\IRepository.cs" />
+    <Compile Include="Repositories\LanguagesRepository.cs" />
+    <Compile Include="Repositories\RepliesRepository.cs" />
+    <Compile Include="Repositories\TicketRepository.cs" />
+    <Compile Include="Repositories\UserRepository.cs" />
+    <Compile Include="Interfaces\IUnitOfWork.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\IdModel.cs" />
     <Compile Include="Models\Languages.cs" />
