--- a/myProject/myProject.csproj
+++ b/myProject/myProject.csproj
@@ -261,9 +261,9 @@
     <Content Include="Views\Replies\Create.cshtml" />
     <Content Include="Views\Replies\Delete.cshtml" />
     <Content Include="Views\Replies\Edit.cshtml" />
-    <Content Include="Views\Replies\Index.cshtml" />
     <Content Include="Views\Replies\ShowReply.cshtml" />
     <Content Include="Views\Account\ViewProfile.cshtml" />
+    <Content Include="Views\Account\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
