--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -82,21 +82,27 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DbContext.cs" />
+    <Compile Include="Interfaces\IDbContext.cs" />
+    <Compile Include="Interfaces\IRepository.cs" />
+    <Compile Include="Interfaces\IUnitOfWork.cs" />
+    <Compile Include="Models\IdentityModels.cs" />
+    <Compile Include="Models\IdModel.cs" />
+    <Compile Include="Models\Languages.cs" />
+    <Compile Include="Models\Photos.cs" />
+    <Compile Include="Models\Replies.cs" />
+    <Compile Include="Models\Ticket.cs" />
+    <Compile Include="MyProjectRepository.cs" />
     <Compile Include="Repositories\LanguagesRepository.cs" />
     <Compile Include="Repositories\RepliesRepository.cs" />
     <Compile Include="Repositories\TicketRepository.cs" />
     <Compile Include="Repositories\UserRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UoW\UnitOfWork.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\BO\BO.csproj">
-      <Project>{ba365cf0-0dc7-4694-aa4b-71c22fb88620}</Project>
-      <Name>BO</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
