--- a/WebUI/WebUI.csproj
+++ b/WebUI/WebUI.csproj
@@ -290,6 +290,8 @@
     <Content Include="Views\Message\Details.cshtml" />
     <Content Include="Views\Message\Edit.cshtml" />
     <Content Include="Views\Message\ShowMessages.cshtml" />
+    <Content Include="Views\Message\Success.cshtml" />
+    <Content Include="Views\Message\MessagesCount.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
